--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "assignment",
   "version": "0.0.1",
   "private": true,
-  "engines": {
-  "node": "16.x"
-},
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,12 +9,13 @@
     "export": "next export",
     "postbuild": "next-sitemap"
   },
+  "engines": { "node": "16.x" },
   "dependencies": {
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.5",
     "globby": "^11.0.0",
     "isomorphic-unfetch": "^3.0.0",
-    "next": "11.1",
+    "next": "9.5.3",
     "next-compose-plugins": "^2.2.0",
     "next-optimized-images": "^2.5.4",
     "prettier": "^2.1.2",
